--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-test",
   "version": "1.0.0",
   "description": "A test of node",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "Salvador Guzman",
   "license": "MIT",
   "private": false,
